soc: Port Changes to export device info to modem.
Port the following changes to export device information to the modem
over SMEM.

(CR) : arm: msm: mmi: export unit info to Modem over SMEM

(CR): arm: msm: add "Device" and "Radio" to /proc/cpuinfo

(CR) arm: msm: Add QCOM HW info to cpuinfo

(CR): arm: msm: Provide power up reason to the modem

(CR) arm: msm: mss: Add modem restart flag usage in SMEM

(CR) mmi-unit-info: remove extraneous includes

(CR) mmi-unit-info: HACK: work around lack of machine_desc in arm64

(CR):socinfo: Fix alignment fault issue

Change-Id: Ia963053382ff917e9a23fa8d5767dbc28f169b13
Signed-off-by: Ravi Vembu <raviv@motorola.com>
Reviewed-on: http://gerrit.mot.com/788568
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -954,3 +954,9 @@ config BECKHAM_DTB
 	help
 	  Only include Beckham specific DTBs to limit the number that
 	  get built during kernel compilation.
+
+config MMI_UNIT_INFO
+	default n
+	bool "Motorola Mobility Unit Info"
+	help
+	Provide mechanism to expose unit information to other cpu via smem.
