--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -1017,3 +1017,11 @@ config MMI_UNIT_INFO
 	bool "Motorola Mobility Unit Info"
 	help
 	Provide mechanism to expose unit information to other cpu via smem.
+
+source "drivers/soc/qcom/memshare/Kconfig"
+
+config MMI_SOC_INFO
+	default n
+	bool "Motorola Mobility SOC Info"
+	help
+	  Provide mechanism to export MSM SOC info.
